# thalex_py

./: .gitignore  LICENSE  Makefile  README.md  _keys.py  black_scholes.py  example_instrument_counter.py  example_mm_rfq.py  example_option_delta_replicator.py  example_options.py  example_perp.py  example_rfq.py  example_rolls.py  example_synth_arbitrage.py  example_taker.py  example_trader.py  keys.py  main.py  process_msg.py  pyproject.toml  requirements.txt  tbump.toml  thalex_py.py
.github/workflows/: common_check.yaml  dev.yml  release.yml
examples/: binary_replicator.py  instrument_counter.py  mm_rfq_quoter.py  option_delta_replicator.py  option_quoter.py  perp_quoter.py  perp_simple.py  rebalancer_quoter.py  rfq_api_demo_mm_quote.py  rfq_api_demo_trade.py  roll_quoter.py  simple_quoter.py  start_grid_bot.py  synth_arbitrage.py  taker.py  trade_rfq.py
tests/: test_thalex.py
thalex/: __init__.py  black_scholes.py  thalex.py  thalex.py.orig
